--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node src/db/command.ts"
+    "seed": "node --loader ts-node/esm src/db/command.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -32,6 +32,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
